fix dropdown menu not working on mobile

--- a/styles.css
+++ b/styles.css
@@ -237,11 +237,10 @@ footer {
             }
 
     .dropdown-content {
-        top: 10%;
+        top: 0;
         left: 50%;
         transform: translateX(-50%);
         display: flex;
-        flex-direction: row;
         gap: 0.5rem;
         flex-wrap: nowrap;
         white-space: nowrap;
